--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@walletconnect/web3-provider": "^1.6.5",
     "moralis": "0.0.42",
     "react": "^17.0.2",
+    "react-card-slide": "^1.0.13",
     "react-dom": "^17.0.2",
     "react-moralis": "^0.2.1",
     "react-router-dom": "^5.3.0",
